chore: Add health endpoint to GW and adjust the ZAAS one (#3580)
* update cert

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* move health indicator and adjust zaas one

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* fix checkstyle

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* fix

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* address comments

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* address comments

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* address comments

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

---------

Signed-off-by: at670475 <andrea.tabone@broadcom.com>
Co-authored-by: Pablo Carle <pablocarle@users.noreply.github.com>